--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -77,6 +77,13 @@ img {
 $color_accent: rgb(225, 78, 52);
 
 /* =====================================================
+  foundation
+===================================================== */
+body {
+  min-width: 1340px;
+}
+
+/* =====================================================
   Layout
 ===================================================== */
 /* -----------------------------------
@@ -181,7 +188,7 @@ $color_accent: rgb(225, 78, 52);
 }
 
 .l-body__inner {
-  padding: 20px;
+  padding: 30px 20px 120px;
 }
 
 /* =====================================================
@@ -198,8 +205,45 @@ $color_accent: rgb(225, 78, 52);
   justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
-  padding-top: 20px;
+  padding-top: 0px;
   padding-bottom: 52px;
+}
+
+.p-code-register__title {
+  appearance: none;
+  width: 100%;
+  height: 6.0rem;
+  resize: none;
+  font-size: 2.4rem;
+  font-weight: 700;
+  padding: 10px 20px;
+  border: none;
+  border-bottom: 0.3rem solid $color_accent;
+  margin-bottom: 3.2rem;
+  letter-spacing: 0.07em;
+
+  &:focus {
+    outline: none;
+  }
+
+  &::placeholder {
+    color: #B2B2B2;
+    letter-spacing: 0.05em;
+  }
+}
+
+.p-code-register__buttons {
+  display: flex;
+  justify-content: space-between;
+  width: calc(50% - 0.75rem);
+  margin-left: auto;
+  margin-bottom: 1.5rem;
+
+  & > * {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+  }
 }
 
 .p-code-register__category {
@@ -236,11 +280,13 @@ $color_accent: rgb(225, 78, 52);
 
 .p-code-register__main {
   display: flex;
-  height: 500px;
+  gap: 15px;
+  min-height: 630px;
 }
 
 .p-code-register__editor {
-  width: 37%;
+  position: relative;
+  width: 50%;
 
   .w-tc-editor {
     width: 100%;
@@ -249,8 +295,69 @@ $color_accent: rgb(225, 78, 52);
 }
 
 .p-code-register__view {
-  width: 63%;
-  padding-left: 20px;
+  position: relative;
+  width: 50%;
+  border: 1.5rem solid #e5e5e5;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.p-code-register__warning {
+  position: absolute;
+  bottom: 0;
+  left: -1.5rem;
+  padding-top: 1.8rem;
+  width: 100%;
+  transform: translateY(100%);
+  font-size: 1.2rem;
+}
+
+.p-code-register__tabs {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(-100%);
+  width: 100%;
+  height: 36px;
+  display: flex;
+  overflow: auto;
+}
+
+.p-code-register__tab {
+  position: relative;
+  padding: 8px 36px 8px 20px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  font-size: 1.4rem;
+  cursor: pointer;
+  background-color: #f5f5f5;
+
+  // 閉じるボタン
+  .close {
+    position: absolute;
+    top: 50%;
+    right: 8px;
+    transform: translateY(-50%);
+    font-size: 1.4rem;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    text-align: center;
+    border-radius: 50%;
+
+    &:hover {
+      background-color: gray;
+      color: #FFF;
+    }
+  }
+
+  &:hover {
+    background-color: #e5e5e5;
+  }
+
+  &.is-active {
+    background-color: $color_accent;
+    color: #fff;
+  }
 }
 
 /* -----------------------------------
@@ -466,6 +573,6 @@ $color_accent: rgb(225, 78, 52);
   cursor: pointer;
 
   &:hover {
-    background-color: rgb(225, 78, 52, 0.8);
+    opacity: 0.8;
   }
 }
